# shave

./: .clippy.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-cli.yml  publish-cli.yml  test.yml
cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
cli/src/: args.rs  main.rs
cli/var/: shell-complete.rs
src/: args.rs  client.rs  lib.rs  main.rs  socket.rs  tcp.rs
