[package]
name = "shave"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/shave"
repository = "https://github.com/d-e-s-o/shave.git"
readme = "README.md"
categories = [
  "accessibility",
  "api-bindings",
  "asynchronous",
  "multimedia::images",
  "web-programming",
]
keywords = [
  "async",
  "html",
  "image",
  "scraping",
  "web",
]
description = """
A library for shaving data from websites.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
fantoccini = { version = "0.20.0-rc.7", default-features = false }
hyper = { version = "0.14", default-features = false, features = ["tcp"] }
libc = { version = "0.2", default-features = false }
serde_json = { version = "1.0.114", default-features = false, features = ["std"] }
tempfile = { version = "3.2", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["process", "time"] }

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "test-util"] }
