[package]
name = "shavecli"
version = "0.0.0"
edition = "2021"
default-run = "shavecli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"
required-features = ["clap_complete"]

[build-dependencies]
anyhow = "1.0.68"
grev = "0.1.3"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.2", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
clap_complete = { version = "4.2", default-features = false, optional = true }
shave = { version = "0.2", path = "../", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["fs", "io-std", "io-util", "macros", "rt"] }
